update plan api
